--- a/index.html
+++ b/index.html
@@ -110,17 +110,19 @@
 						<i class="sidebar icon"></i>
 					</div>
 				</div>
-				<div class="btn-navigation prev-chapter" id="prev_chapter" style="display:none;" data-tooltip="Chapitre précédent" data-position="top right">
+
+				<div class="btn-navigation prev-chapter " id="prev_chapter" style="display:none;" data-tooltip="Chapitre Précédent" data-position="top left">
+					<div class="ui circular icon image pointing" >
+						<i class="angle double left icon"></i>
+					</div>
+				</div>
+				<div class="btn-navigation next-chapter" id="next_chapter" style="display:none;" data-tooltip="Chapitre Suivant" data-position="top right">
 					<div class="ui circular icon image pointing" >
 
 						<i class="angle double right icon"></i>
 					</div>
 				</div>
-				<div class="btn-navigation next-chapter" id="next_chapter" style="display:none;" data-tooltip="Chapitre suivant" data-position="top left">
-					<div class="ui circular icon image pointing" >
-						<i class="angle double left icon"></i>
-					</div>
-				</div>
+
 				<div class="btn-navigation download-chapter" id="download_chapter" data-tooltip="Download" data-position="bottom left">
 					<div class="ui circular icon image pointing" >
 						<i class="download icon"></i>
