add pages buttons and pages select

--- a/index.html
+++ b/index.html
@@ -91,7 +91,13 @@
 				<div class="content">
 					Notre lecture en ligne fonctionne entièrement en javascript et n'intègre pas encore d'historique de navigation.<br/>
 					C'est pourquoi faire un retour arrière sur votre navigateur vous fera quitter cette page, ou que recharger la page vous fera revenir ici, même si vous êtes en train de lire un chapitre.<br/>
-					L'historique de navigation sera (surement un jour... peut-être) ajouté.
+					L'historique de navigation sera (surement un jour... peut-être) ajouté.<br/>
+				</div>
+			</div>
+			<div class="ui icon info message" id="info_reader">
+				<i class="info circle icon"></i>
+				<div class="content">
+					Cette lecture en ligne n'est pas (encore) adaptée pour les mobiles et tablettes
 				</div>
 			</div>
 
