--- a/index.html
+++ b/index.html
@@ -57,12 +57,6 @@
 				</select>
 			</div>
 			<div class="field">
-				<label>Sélectionne une page :</label>
-				<select class="ui fluid dropdown" id="page_select">
-
-				</select>
-			</div>
-			<div class="field">
 				<div type="submit" class="ui right icon button red inverted fluid" tabindex="0">
 					Lire le chapitre
 					<i class="right arrow icon"></i>
@@ -70,6 +64,28 @@
 			</div>
 		</form>
 	</div>
+
+	<div class="item">
+
+		<div class="ui form">
+			<div class="inline fields">
+				<label>Page</label>
+				<div class="field">
+					<div class="ui selection dropdown" id="page_select_div">
+						<input type="hidden" name="page_select" id="page_select">
+						<i class="dropdown icon"></i>
+						<div class="default text">Page</div>
+						<div class="menu">
+
+						</div>
+					</div>
+				</div>
+
+			</div>
+		</div>
+
+	</div>
+
 </div>
 
 
