--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 	<script src="node_modules/jszip-utils/dist/jszip-utils.min.js"></script>
 	<script src="node_modules/jszip/dist/jszip.min.js"></script>
 
-
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body class=" pushable">
@@ -185,6 +184,6 @@
 	</div>
 
 
-	<script src="js/main.js"></script>
+	<script src="js/main.js?v=1.1.0"></script>
 </body>
 </html>
